# text-all

./: .travis.yml  CHANGELOG.md  README.md  stack.yaml  text-all.cabal
lib/Data/Text/: All.hs
lib/Data/Text/Builder/: All.hs
lib/Data/Text/Lazy/: All.hs
