name:                text-all
version:             0.1.0.0
synopsis:            Everything Data.Text related in one package
description:
  Everything Data.Text related in one package
homepage:            http://github.com/aelve/text-all
bug-reports:         http://github.com/aelve/text-all/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Text
tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/text-all.git

library
  exposed-modules:     Data.Text.All
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.5 && <5
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      lib
  default-language:    Haskell2010
